Add reservation script

--- a/homework-template/src/frontend/index.html
+++ b/homework-template/src/frontend/index.html
@@ -69,6 +69,8 @@
     <script src="/pages/home.js"></script>
     <script src="/pages/meals.js"></script>
     <script src="/pages/meal.js"></script>
+    <script src="/pages/reservation.js"></script>
+
     <!-- <script src="/pages/review.js"></script> -->
     <!-- <script src="/pages/reservation.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" 
