--- a/homework-template/src/frontend/index.html
+++ b/homework-template/src/frontend/index.html
@@ -71,6 +71,8 @@
     <script src="/pages/meal.js"></script>
     <script src="/pages/reservation.js"></script>
     <script src="/pages/reviews.js"></script>
+    <script src="/pages/review.js"></script>
+
     <!-- <script src="/pages/review.js"></script> -->
     <!-- <script src="/pages/reservation.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" 
