Add add-meal.js script add Add meal to Navbar

--- a/homework-template/src/frontend/index.html
+++ b/homework-template/src/frontend/index.html
@@ -31,6 +31,9 @@
         </div> 
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="/meals">All meals </a>
+        </div>
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="/add-meal">Add meal </a>
         </div>  
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="/about">About</a>
@@ -72,6 +75,7 @@
     <script src="/pages/reservation.js"></script>
     <script src="/pages/reviews.js"></script>
     <script src="/pages/review.js"></script>
+    <script src="/pages/add-meal.js"></script>
 
     <!-- <script src="/pages/review.js"></script> -->
     <!-- <script src="/pages/reservation.js"></script> -->
