--- a/homework-template/src/frontend/index.html
+++ b/homework-template/src/frontend/index.html
@@ -48,13 +48,13 @@
     <div class="content"></div>
 
     <!-- Footer -->
-    <div class="footer">
-      <div class="container-fluid">
+    
+      <div class="container-fluid footer ">
         <div class="row">
-          <div class="col text-left text-uppercase copy-right">
+          <div class="col-5 text-left text-uppercase copy-right">
            Copy right 2020 MealSharing &copy; All right reserved
           </div>
-          <div class="col">
+          <div class="col-7">
             <ul class="contact-list text-right">
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
@@ -65,7 +65,7 @@
           </div>
         </div>
       </div>
-    </div>
+  
 
     
     <script src="//unpkg.com/navigo@6"></script>
