--- a/homework-template/src/frontend/index.html
+++ b/homework-template/src/frontend/index.html
@@ -76,6 +76,8 @@
     <script src="/pages/reviews.js"></script>
     <script src="/pages/review.js"></script>
     <script src="/pages/add-meal.js"></script>
+    <script src="/pages/about.js"></script>
+
 
     <!-- <script src="/pages/review.js"></script> -->
     <!-- <script src="/pages/reservation.js"></script> -->
